--- a/src/banner/AddDrop.form
+++ b/src/banner/AddDrop.form
@@ -96,6 +96,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="DROP"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
